# az-scout-plugin-fabric-price

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/az_scout_fabric_price/: __init__.py  bdd_client.py  models.py  routes.py  service.py  tools.py
src/az_scout_fabric_price/static/css/: fabric-price.css
src/az_scout_fabric_price/static/html/: fabric-price-tab.html
src/az_scout_fabric_price/static/js/: fabric-price-tab.js
tests/: test_models.py  test_routes.py  test_service.py
